Wed Jul 20 15:40:29 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/ReceivedDataElementList.inl:

          Corrected comment about why the instance state is not 
          deleted in the destructor.

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Added delete of queue in destructor.  It was new'd in
          the constructor.

Wed Jul 20 12:11:14 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp:
          Changed ptr in read to var to not leak memory.

Wed Jul 20 13:10:23 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Fix -a option so it overrides the address properly.

Mon Jul 18 17:27:29 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/transport/simple_bp/SimpleSubscriber.cpp:

          Fix return value error that VC6 caught.

Mon Jul 18 13:30:13 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/DCPS/FooTest5/publisher.cpp:

          Remove extra fclose() that was causing failures.

Mon Jul 18 13:18:45 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * DevGuideExamples/DDS/Messenger/DataReaderListener.h:
        * DevGuideExamples/DDS/Messenger/DataReaderListener.cpp:
        * DevGuideExamples/DDS/Messenger/Messenger.idl:
        * DevGuideExamples/DDS/Messenger/Messenger.mpc:
        * DevGuideExamples/DDS/Messenger/Writer.h:
        * DevGuideExamples/DDS/Messenger/Writer.cpp:
        * DevGuideExamples/DDS/Messenger/domain_ids:
        * DevGuideExamples/DDS/Messenger/publisher.cpp:
        * DevGuideExamples/DDS/Messenger/run_test.pl:
        * DevGuideExamples/DDS/Messenger/subscriber.cpp:

          Update and merge the devguide example.  I put it here
          because it proved difficult to integrate into the TAO
          DevGuideExamples directory.

Mon Jul 18 06:43:11 MST 2005  Scott Harris <harris_s@ociweb.com>
